--- a/Promociones/Promociones.html
+++ b/Promociones/Promociones.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gmail</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Promociones</title>
+    <link rel="stylesheet" href="../Pantalla_Carga/style.css">
 </head>
 <body>
     <div class="loading-screen">
@@ -16,6 +16,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../Pantalla_Carga/script.js"></script>
 </body>
 </html>
