Se agregaron las pantallas de carga

--- a/Principal/index.html
+++ b/Principal/index.html
@@ -19,7 +19,7 @@
     <div class="content">
     <div class="header">
         <div class="menu-icon" id="menu-icon">&#9776;</div>
-        <img src="../Img/Gmail.png" alt="Gmail Logo"><a href="../Pantalla_Carga/Pantalla_Carga.html" class="linea">Gmail</a>
+        <img src="../Img/Gmail.png" alt="Gmail Logo"><a href="index.html" class="linea">Gmail</a>
         <input type="text" placeholder="Buscar correo">
     </div>
 
