--- a/Notificaciones/Notificaciones.html
+++ b/Notificaciones/Notificaciones.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../Pantalla_Carga/style.css">
     <title>Notificaciones</title>
 </head>
 <body>
-    
+    <div class="loading-screen">
+        <div class="logo-container">
+            <img src="../Img/Gmail.png" alt="Gmail Logo" class="logo">
+        </div>
+        <div class="loading-bar">
+            <div class="progress"></div>
+        </div>
+    </div>
+    <script src="../Pantalla_Carga/script.js"></script>
 </body>
 </html>
