--- a/Social/Social.html
+++ b/Social/Social.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social</title>
+    <link rel="stylesheet" href="../Pantalla_Carga/style.css">
 </head>
 <body>
-    
+    <div class="loading-screen">
+        <div class="logo-container">
+            <img src="../Img/Gmail.png" alt="Gmail Logo" class="logo">
+        </div>
+        <div class="loading-bar">
+            <div class="progress"></div>
+        </div>
+    </div>
+    <script src="../Pantalla_Carga/script.js"></script>
 </body>
 </html>
