Se acomodo la barra

--- a/Principal/index.html
+++ b/Principal/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"&amp;gt;>
     <title>Gmail</title>
     <link rel="stylesheet" href="styles.css">
+   
     <link rel="shortcut icon" href="https://ssl.gstatic.com/ui/v1/icons/mail/rfr/gmail.ico" type="image/x-icon">
 </head>
 <body>
@@ -17,13 +18,13 @@
         </div>
     </div>
     <div class="content">
-    <div class="header">
+    <div class="header" >
         <div class="menu-icon" id="menu-icon">&#9776;</div>
-        <img src="../Img/Gmail.png" alt="Gmail Logo"><a href="index.html" class="linea">Gmail</a>
+        <img src="../Img/Gmail.png" alt="Gmail Logo"><a href="../Pantalla_Carga/Pantalla_Carga.html" class="linea">Gmail</a>
         <input type="text" placeholder="Buscar correo">
     </div>
 
-    <table class="tab-list ">
+    <table class="tab-list" style="margin-left: 20%; margin-right: auto; padding:1px;" >
         <tr>
             <td class="tab-item" role="heading" aria-level="3">
                 <div class="tab-content" tabindex="0" role="tab" aria-selected="true" aria-controls="principal" aria-label="Principal">
@@ -906,5 +907,6 @@
     </div>
 </divclass>
     <script src="script.js"></script>
+
 </body>
 </html>
